[gd_scene load_steps=8 format=3 uid="uid://cnfcqqt0wkg7x"]

[ext_resource type="Script" uid="uid://blahajgc8ddxd" path="res://scripts/goals_menu.gd" id="1_rsgpc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ygvg"]
bg_color = Color(0.17254902, 0.50980395, 0.74509805, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsgpc"]
bg_color = Color(0.6117647, 0.78431374, 0.94509804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3c0b"]
bg_color = Color(0.39607844, 0.4862745, 0.20784314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o33yy"]
bg_color = Color(0.6156863, 0.9411765, 0.53333336, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fydej"]
bg_color = Color(0.5568628, 0.24705882, 0.16862746, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6p5xi"]
bg_color = Color(0.89411765, 0.5568628, 0.40784314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GoalsMenu" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 227.0
grow_horizontal = 2
script = ExtResource("1_rsgpc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GOALS"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 220)
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TermProgress" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_3ygvg")
theme_override_styles/fill = SubResource("StyleBoxFlat_rsgpc")
value = 45.0
fill_mode = 3
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MonthlyProgress" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_s3c0b")
theme_override_styles/fill = SubResource("StyleBoxFlat_o33yy")
value = 30.0
fill_mode = 3
show_percentage = false

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeeklyProgress" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_fydej")
theme_override_styles/fill = SubResource("StyleBoxFlat_6p5xi")
value = 12.75
fill_mode = 3
show_percentage = false
